--- a/src/app/[locale]/AppTopbar.module.css
+++ b/src/app/[locale]/AppTopbar.module.css
@@ -1,5 +1,12 @@
 .AppTopbar__Searchbar {
-  width: 40%;
+  width: 50%;
   background-color: var(--color-bg-secondary);
   border: none;
+}
+
+.MainContent {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
