Changes for preliminary demo.

--- a/src/components/validation-rules-list/ValidationRulesList.module.css
+++ b/src/components/validation-rules-list/ValidationRulesList.module.css
@@ -50,3 +50,7 @@
 .ValidationRuleSinglesList .ValidationRuleListRow:last-child .ValidationRule {
   margin-bottom: 0;
 }
+
+.marginBottomPageSectionHeader {
+  margin-bottom: var(--margin-bottom-page-section-header);
+}
