Working on data-type specific fields.

--- a/src/app/[locale]/validation-rules/ValidationRulesDialogForm.module.css
+++ b/src/app/[locale]/validation-rules/ValidationRulesDialogForm.module.css
@@ -6,3 +6,9 @@
   position: sticky;
   top: 0;
 }
+
+.DataTypeOptionLabel {
+  display: flex;
+  align-items: center;
+  gap: var(--gap-data-type-option-label);
+}
